# Azure-WAF-Review-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  REAL_WORLD_VALIDATION_DEMO.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml  deploy-production.yml  deploy-staging.yml  integration.yml  pr-validation.yml
deploy/helm/extraction-agent/: Chart.yaml  values.yaml
deploy/helm/preparation-agent/: Chart.yaml  values.yaml
deploy/helm/reasoning-agent/: Chart.yaml  values.yaml
deploy/helm/waf-api/: Chart.yaml  (+1 more)
docker/: servicebus_config.json
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
sample_output/: waf_enterprise_full.xlsx
scripts/: backfill_waf_codes.py  dependency_validation.py  integration_validation.py  seed_rules.py  setup_dev.sh  startup_validation.py  validate_system.py  validate_waf_catalog.py
src/agents/extraction/: Dockerfile  __init__.py  pyproject.toml
src/agents/extraction/waf_extraction/: __init__.py  config.py  handler.py  main.py
src/agents/preparation/: Dockerfile  __init__.py  pyproject.toml
src/agents/preparation/waf_preparation/: __init__.py  config.py  handler.py  main.py
src/agents/reasoning/: Dockerfile  __init__.py  pyproject.toml
src/agents/reasoning/waf_reasoning/: __init__.py  config.py  deterministic_pipeline.py  dsl_evaluator.py  handler.py  llm_pipeline.py  main.py  property_compressor.py
src/agents/reporting/: Dockerfile  pyproject.toml
src/agents/reporting/waf_reporting/: aggregator.py  architecture_diagram.py  business_impact_analysis.py  chart_builder.py  config.py  excel_generator.py  executive_insights.py  handler.py  main.py  pdf_generator.py  remediation_playbook.py  remediation_templates.py  scoring.py  scoring_config.py  scoring_engine.py  storage_uploader.py  topology_builder.py  webhook_service.py
src/agents/reporting/waf_reporting/services/: compliance_mapper.py  dashboard_builder.py  evidence_formatter.py  executive_story_generator.py  remediation_planner.py
src/api/: Dockerfile  pyproject.toml
src/api/waf_api/: __init__.py  config.py  container.py  dev_bootstrap.py  main.py
src/api/waf_api/dependencies/: __init__.py  db.py  rbac.py  services.py
src/api/waf_api/middleware/: __init__.py  auth.py  security_headers.py  telemetry.py
src/api/waf_api/routers/: __init__.py  assessments.py  health.py  human_review.py  system.py
src/api/waf_api/schemas/: __init__.py
src/api/waf_api/schemas/requests/: __init__.py  assessment_requests.py  human_review_requests.py
src/api/waf_api/schemas/responses/: __init__.py  error_response.py  pagination_response.py
src/api/waf_api/services/: __init__.py  assessment_service.py  credential_service.py  discovery_service.py  human_review_service.py  quota_service.py  tenant_service.py
src/shared/: pyproject.toml
src/shared/waf_catalog/: __init__.py  catalog.py  coverage.py  coverage_report.json  framework_inventory.json  framework_validation_report.json  gap_analysis.json  gap_analyzer.py  human_review_controls.json  refresher.py  rule_definitions.py  startup.py  traceability.py  validator.py  waf_control_mapping.json  waf_controls.json
src/shared/waf_shared/: __init__.py
src/shared/waf_shared/agents/: __init__.py  base_agent.py  contracts.py  events.py  interfaces.py  metrics.py  middleware.py  orchestrator.py  pipeline.py  retry.py  settings.py  state.py
src/shared/waf_shared/auth/: __init__.py  auth_service.py  authz_service.py  config.py  credential_provider.py  models.py  token_provider.py
src/shared/waf_shared/db/: __init__.py  jsonb.py  pool.py  repository.py  unit_of_work.py
src/shared/waf_shared/db/migrations/: env.py  script.py.mako
src/shared/waf_shared/db/migrations/versions/: 0001_core_schema.py  0002_assessment_lifecycle.py  0003_rules_and_findings.py  0004_reports_and_webhooks.py  0005_schema_fixes.py  0006_waf_catalog_enrichment.py  0007_human_review_framework.py  0008_add_advisor_mapped_eval_type.py
src/shared/waf_shared/db/models/: __init__.py  assessment.py  base.py  credential.py  finding.py  human_review.py  rule.py  tenant.py
src/shared/waf_shared/db/repositories/: __init__.py  assessment_repository.py  credential_repository.py  finding_repository.py  human_review_repository.py  report_repository.py  rule_repository.py  tenant_repository.py  webhook_repository.py
src/shared/waf_shared/discovery/: __init__.py  advisor_client.py  config.py  metrics.py  models.py  resource_graph_client.py  resource_group_discovery.py  resource_inventory.py  retry.py  subscription_discovery.py
src/shared/waf_shared/domain/: __init__.py
src/shared/waf_shared/domain/errors/: __init__.py  application_errors.py  domain_errors.py  infrastructure_errors.py
src/shared/waf_shared/domain/events/: __init__.py  assessment_events.py  base.py
src/shared/waf_shared/domain/models/: __init__.py  assessment.py  credential.py  finding.py  human_review.py  report.py  rule.py  tenant.py  webhook.py
src/shared/waf_shared/domain/repositories/: __init__.py  i_assessment_repository.py  i_credential_repository.py  i_finding_repository.py  i_human_review_repository.py  i_rule_repository.py  i_tenant_repository.py
src/shared/waf_shared/infra/: keyvault.py
src/shared/waf_shared/llm/: __init__.py  azure_openai.py  factory.py  gemini_provider.py  provider.py
src/shared/waf_shared/messaging/: __init__.py  queue_names.py  service_bus.py
src/shared/waf_shared/runtime/: signals.py
src/shared/waf_shared/telemetry/: __init__.py  logging.py  metrics.py  otel.py
tests/: conftest.py
tests/contract/: test_service_bus_message_shapes.py
tests/e2e/: conftest.py  test_assessment_lifecycle.py
tests/fixtures/: factories.py
tests/integration/: conftest.py
tests/performance/: conftest.py  locustfile.py  test_dsl_evaluator_throughput.py
tests/unit/: conftest.py
(+101 files in other folders)
