[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waf-api"
version = "0.1.0"
description = "FastAPI REST service for the WAF Review Agent"
requires-python = ">=3.12"
dependencies = [
    "waf-agent-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "dependency-injector>=4.41.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["waf_api"]
