[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waf-agent-shared"
version = "0.1.0"
description = "Shared domain models, infrastructure, and utilities for the WAF Review Agent"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "structlog>=24.2.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-identity>=1.17.0",
    "aiohttp>=3.9.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-advisor>=9.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-subscription>=3.0.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-storage-blob>=12.20.0",
    "azure-servicebus>=7.12.0",
    "azure-search-documents>=11.6.0",
    "openai>=1.35.0",
    "google-genai>=1.0.0",
    "tenacity>=8.4.0",
    "jsonschema>=4.22.0",
    "redis>=5.0.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["waf_shared", "waf_catalog"]
