[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waf-extraction"
version = "0.1.0"
description = "Extraction Agent — queries ARM for resource properties across all WAF pillars"
requires-python = ">=3.12"
dependencies = [
    "waf-agent-shared",
    "azure-servicebus>=7.11.4",
    "azure-identity>=1.16.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-keyvault>=10.3.0",
    "azure-mgmt-containerservice>=30.0.0",
    "azure-mgmt-sql>=3.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-authorization>=4.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["waf_extraction"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
