[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waf-preparation"
version = "0.1.0"
description = "Preparation Agent — validates and enqueues WAF assessment requests"
requires-python = ">=3.12"
dependencies = [
    "waf-agent-shared",
    "azure-servicebus>=7.11.4",
    "azure-identity>=1.16.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-subscription>=3.1.1",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["waf_preparation"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
